[package]
name = "blitz-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.3", features = ["json", "serde_json"] }
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
thiserror = "1.0.47"
